--- a/RuyiSDKCpp/RuyiSDKCpp.vcxproj
+++ b/RuyiSDKCpp/RuyiSDKCpp.vcxproj
@@ -436,6 +436,7 @@
     <ClCompile Include="Generated\InputManager\InputManagerSDKDataTypes_types.cpp" />
     <ClCompile Include="Generated\InputManager\InputManagerSDKServices_constants.cpp" />
     <ClCompile Include="Generated\InputManager\InputManagerSDKServices_types.cpp" />
+    <ClCompile Include="Generated\InputManager\InputManagerService.cpp" />
     <ClCompile Include="Generated\LocalizationService\LocalizationService.cpp" />
     <ClCompile Include="Generated\LocalizationService\LocalizationServiceSDKDataTypes_constants.cpp" />
     <ClCompile Include="Generated\LocalizationService\LocalizationServiceSDKDataTypes_types.cpp" />
@@ -496,6 +497,7 @@
     <ClInclude Include="Generated\InputManager\InputManagerSDKDataTypes_types.h" />
     <ClInclude Include="Generated\InputManager\InputManagerSDKServices_constants.h" />
     <ClInclude Include="Generated\InputManager\InputManagerSDKServices_types.h" />
+    <ClInclude Include="Generated\InputManager\InputManagerService.h" />
     <ClInclude Include="Generated\LocalizationService\LocalizationService.h" />
     <ClInclude Include="Generated\LocalizationService\LocalizationServiceSDKDataTypes_constants.h" />
     <ClInclude Include="Generated\LocalizationService\LocalizationServiceSDKDataTypes_types.h" />
