add reference for message file in SDK nf2.0

--- a/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
+++ b/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
@@ -87,6 +87,8 @@
     <Compile Include="GeneratedSync\Ruyi\SDK\MediaService\QueryResultMsg.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\MediaService\RemovePathMsg.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\MediaService\RequestMsg.cs" />
+    <Compile Include="GeneratedSync\Ruyi\SDK\OverlayManagerExternal\ExternalOverlayManagerService.cs" />
+    <Compile Include="GeneratedSync\Ruyi\SDK\OverlayManagerExternal\NotifyTakeScreenShot.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkSettingNameValue.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkSettings.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkStatus.cs" />
