--- a/RuyiSDK.nf2.0/RuyiSDK.nf2.0.csproj
+++ b/RuyiSDK.nf2.0/RuyiSDK.nf2.0.csproj
@@ -159,6 +159,27 @@
     <Compile Include="..\RuyiSDK\RuyiNet\Service\Lobby\RuyiNetLobbyType.cs">
       <Link>RuyiNet\Service\Lobby\RuyiNetLobbyType.cs</Link>
     </Compile>
+    <Compile Include="..\RuyiSDK\RuyiNet\Service\Party\Response\RuyiNetPartyData.cs">
+      <Link>RuyiNet\Service\Party\Response\RuyiNetPartyData.cs</Link>
+    </Compile>
+    <Compile Include="..\RuyiSDK\RuyiNet\Service\Party\Response\RuyiNetPartyInvitationData.cs">
+      <Link>RuyiNet\Service\Party\Response\RuyiNetPartyInvitationData.cs</Link>
+    </Compile>
+    <Compile Include="..\RuyiSDK\RuyiNet\Service\Party\Response\RuyiNetPartyInvitationResponse.cs">
+      <Link>RuyiNet\Service\Party\Response\RuyiNetPartyInvitationResponse.cs</Link>
+    </Compile>
+    <Compile Include="..\RuyiSDK\RuyiNet\Service\Party\Response\RuyiNetPartyListResponse.cs">
+      <Link>RuyiNet\Service\Party\Response\RuyiNetPartyListResponse.cs</Link>
+    </Compile>
+    <Compile Include="..\RuyiSDK\RuyiNet\Service\Party\Response\RuyiNetPartyResponse.cs">
+      <Link>RuyiNet\Service\Party\Response\RuyiNetPartyResponse.cs</Link>
+    </Compile>
+    <Compile Include="..\RuyiSDK\RuyiNet\Service\Party\RuyiNetParty.cs">
+      <Link>RuyiNet\Service\Party\RuyiNetParty.cs</Link>
+    </Compile>
+    <Compile Include="..\RuyiSDK\RuyiNet\Service\Party\RuyiNetPartyInvitation.cs">
+      <Link>RuyiNet\Service\Party\RuyiNetPartyInvitation.cs</Link>
+    </Compile>
     <Compile Include="..\RuyiSDK\RuyiNet\Service\Party\RuyiNetPartyService.cs">
       <Link>RuyiNet\Service\Party\RuyiNetPartyService.cs</Link>
     </Compile>
