[PubSub] Initial implementation using nng

--- a/SDK.BaseAsync/SDK.BaseAsync.csproj
+++ b/SDK.BaseAsync/SDK.BaseAsync.csproj
@@ -22,4 +22,10 @@
     <ProjectReference Include="..\SDK.Gen.ServiceAsync\SDK.Gen.ServiceAsync.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="NNanomsg.NETStandard">
+      <HintPath>..\..\..\..\NNanomsg\NNanomsg.NETStandard\bin\Debug\netstandard2.0\NNanomsg.NETStandard.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
