[Layer0] Abstract message transport layer
- Use of ZeroMQ and MDP and creation of communication objects moved to MDPActorFactory (IActorFactory)
- Broker and pubsub connection strings also contained by IActorFactory

--- a/RuyiSDKAsync/SDK.RuyiSDKAsync.csproj
+++ b/RuyiSDKAsync/SDK.RuyiSDKAsync.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\commons\Common\Common.csproj" />
+    <ProjectReference Include="..\..\commons\MDPCommon\MDPCommon.csproj" />
     <ProjectReference Include="..\..\externals\thrift.netcore\Thrift.csproj" />
     <ProjectReference Include="..\RuyiLogger\RuyiLogger.csproj" />
     <ProjectReference Include="..\SDK.BaseAsync\SDK.BaseAsync.csproj" />
