--- a/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
+++ b/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
@@ -91,6 +91,7 @@
     <Compile Include="GeneratedSync\Ruyi\SDK\OverlayManagerExternal\NotifyTakeScreenShot.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkSettingNameValue.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkSettings.cs" />
+    <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkSpeed.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkStatus.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkTestItem.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkTestResult.cs" />
