--- a/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
+++ b/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
@@ -69,6 +69,7 @@
     <Compile Include="GeneratedSync\Ruyi\SDK\ExternalErrors\ExternalErrorCode.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\ExternalErrors\ExternalErrorInfos.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\ExternalErrors\ExternalErrorsSDKDataTypes.Constants.cs" />
+    <Compile Include="GeneratedSync\Ruyi\SDK\InputManager\GamepadInfo.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\InputManager\InputManagerService.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\InputManager\JoystickOffset.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\InputManager\Key.cs" />
