--- a/RuyiSDK/RuyiSDK.csproj
+++ b/RuyiSDK/RuyiSDK.csproj
@@ -6,6 +6,18 @@
     <Platforms>AnyCPU;x64</Platforms>
     <Configurations>Debug;Release</Configurations>
     <RootNamespace>Ruyi.SDK</RootNamespace>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>Subor.SDK.NetStandard</PackageId>
+    <Version>0.9.0</Version>
+    <Authors>Subor</Authors>
+    <Company>Subor Advanced Technology Co., Ltd.</Company>
+    <PackageTags>subor z+ zplus ruyi</PackageTags>
+    <RepositoryUrl>https://github.com/subor/sdk</RepositoryUrl>
+    <PackageLicenseUrl>https://github.com/subor/sdk/blob/master/LICENSE.md</PackageLicenseUrl>
+    <Product>Subor.SDK</Product>
+    <PackageProjectUrl>http://www.playzplus.com/</PackageProjectUrl>
+    <SignAssembly>true</SignAssembly>
+    <DelaySign>false</DelaySign>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>..\..\output\Debug\RuyiSDK\RuyiSDK.xml</DocumentationFile>
