--- a/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
+++ b/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
@@ -97,6 +97,8 @@
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkTestItem.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkTestResult.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\WifiEntity.cs" />
+    <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\ZPBluetoothDeviceInfo.cs" />
+    <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\ZPBluetoothDeviceList.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\Speech\File.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\Http\HttpService.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\Http\SubscribeReply.cs" />
