--- a/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
+++ b/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
@@ -90,6 +90,9 @@
     <Compile Include="GeneratedSync\Ruyi\SDK\MediaService\RequestMsg.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\OverlayManagerExternal\ExternalOverlayManagerService.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\OverlayManagerExternal\NotifyTakeScreenShot.cs" />
+    <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\BluetoothDevice.cs" />
+    <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\BluetoothDeviceList.cs" />
+    <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\BluetoothDevicePinRequest.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkSettingNameValue.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkSettings.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkSpeed.cs" />
@@ -97,9 +100,6 @@
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkTestItem.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkTestResult.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\WifiEntity.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\ZPBluetoothDeviceInfo.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\ZPBluetoothDeviceList.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\ZPBluetoothDevicePinRequest.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\Speech\File.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\Http\HttpService.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\Http\SubscribeReply.cs" />
