--- a/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
+++ b/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
@@ -93,6 +93,7 @@
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\BluetoothDevice.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\BluetoothDeviceList.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\BluetoothDevicePinRequest.cs" />
+    <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\NetworkConnectionStatus.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkSettingNameValue.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkSettings.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkSpeed.cs" />
