--- a/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
+++ b/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
@@ -92,6 +92,7 @@
     <Compile Include="GeneratedSync\Ruyi\SDK\OverlayManagerExternal\ExternalOverlayManagerService.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\OverlayManagerExternal\NotifyTakeScreenShot.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\NetworkConnectionStatus.cs" />
+    <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\NetworkSettings.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkSettingNameValue.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkSettings.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\SettingSystem\Api\RuyiNetworkStatus.cs" />
