--- a/RuyiSDKCpp/RuyiSDKCpp.vcxproj.filters
+++ b/RuyiSDKCpp/RuyiSDKCpp.vcxproj.filters
@@ -292,6 +292,24 @@
     <ClCompile Include="RuyiNet\Service\Leaderboard\RuyiNetLeaderboardType.cpp">
       <Filter>Sources\RuyiNet\Service\Leaderboard</Filter>
     </ClCompile>
+    <ClCompile Include="RuyiNet\Service\Leaderboard\RuyiNetLeaderboardConfig.cpp">
+      <Filter>Sources\RuyiNet\Service\Leaderboard</Filter>
+    </ClCompile>
+    <ClCompile Include="RuyiNet\Service\Leaderboard\RuyiNetLeaderboardEntry.cpp">
+      <Filter>Sources\RuyiNet\Service\Leaderboard</Filter>
+    </ClCompile>
+    <ClCompile Include="RuyiNet\Service\Leaderboard\RuyiNetLeaderboardInfo.cpp">
+      <Filter>Sources\RuyiNet\Service\Leaderboard</Filter>
+    </ClCompile>
+    <ClCompile Include="RuyiNet\Service\Leaderboard\RuyiNetLeaderboardPage.cpp">
+      <Filter>Sources\RuyiNet\Service\Leaderboard</Filter>
+    </ClCompile>
+    <ClCompile Include="RuyiNet\Service\Leaderboard\RuyiNetLeaderboardVersionInfo.cpp">
+      <Filter>Sources\RuyiNet\Service\Leaderboard</Filter>
+    </ClCompile>
+    <ClCompile Include="RuyiNet\Service\Leaderboard\RuyiNetPlayerScore.cpp">
+      <Filter>Sources\RuyiNet\Service\Leaderboard</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Generated\InputManager\InputManagerSDKDataTypes_constants.h">
